crates/klio-cfa/tests/snapshots/builder__loop_with_backedge.snap
---
source: crates/klio-cfa/tests/builder.rs
expression: print_cfg(&cfg)
---
cfg: entry=b0
exits: b3

b0:
  term: goto b1

b1:
  preds: b0, b2
  r0 = eval @0..1 :: Boolean
  term: branch r0 -> b2 else b3

b2:
  preds: b1(T)
  assume r0
  backedge l0
  term: goto b1

b3:
  preds: b1(F)
  assume !r0
  term: return
