crates/klio-cfa/tests/snapshots/builder__straight_line.snap
---
source: crates/klio-cfa/tests/builder.rs
expression: print_cfg(&cfg)
---
cfg: entry=b0
exits: b0

b0:
  r0 = eval @0..1 :: Int
  r1 = eval @2..3 :: Int
  assign tmp = r0
  term: return r1
