crates/klio-cfa/tests/snapshots/builder__try_catch_finally_edges.snap
---
source: crates/klio-cfa/tests/builder.rs
expression: print_cfg(&cfg)
---
cfg: entry=b0
exits: b4

b0:
  term: goto b1

b1:
  preds: b0
  r0 = eval @0..5 :: Int
  term: goto b3

b2:
  preds: b1(throw String)
  r1 = eval @6..9 :: Int
  term: goto b3

b3:
  preds: b1, b2
  term: goto b4

b4:
  preds: b3, b3(finally-exit)
  term: return
